# GAHeaderLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  LinuxMake  MacMake  README.md  ga.h  hall.h  main.cpp
include/: ga.h  geno.h  hall.h  ind.h  pheno.h  pop.h
include/ga/: cross.h  ga.h  geno.h  hall.h  ind.h  mutate.h  pheno.h  pop.h  select.h
src/: main.cpp
